# portkey-playground

./: .env.example  LICENSE  README.md  pyproject.toml
local/: compose.yml
local/portkey/: Dockerfile  load-patch.js
src/: chat_completions.py  main.py  streaming.py  utils.py
